parser.output
Terminals unused in grammar

   FUNCTION_CALL


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 block: OPEN_BRACE statement_list CLOSE_BRACE
    3      | OPEN_BRACE CLOSE_BRACE

    4 statement_list: statement
    5               | statement_list statement

    6 statement: TYPE IDENTIFIER ASSIGN relexpression
    7          | IDENTIFIER ASSIGN relexpression
    8          | PRINT OPEN_PARENT print_list CLOSE_PARENT
    9          | IF OPEN_PARENT relexpression CLOSE_PARENT block
   10          | IF OPEN_PARENT relexpression CLOSE_PARENT block ELSE block
   11          | WHILE OPEN_PARENT relexpression CLOSE_PARENT block
   12          | FUNCTION_DECLARATION IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT block
   13          | IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT
   14          | RETURN relexpression

   15 parameter_list: IDENTIFIER
   16               | parameter_list COMMA IDENTIFIER

   17 print_list: relexpression
   18           | print_list COMMA relexpression

   19 relexpression: expression EQUAL expression
   20              | expression LESS_THAN expression
   21              | expression GREATER_THAN expression
   22              | expression

   23 expression: term PLUS term
   24           | term MINUS term
   25           | term OR term
   26           | term

   27 term: factor
   28     | term MULT factor
   29     | term DIV factor
   30     | term AND factor

   31 factor: INT
   32       | STRING
   33       | TRUE
   34       | FALSE
   35       | IDENTIFIER
   36       | PLUS factor
   37       | MINUS factor
   38       | NOT factor
   39       | OPEN_PARENT relexpression CLOSE_PARENT


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 6 7
PLUS (259) 23 36
MINUS (260) 24 37
MULT (261) 28
DIV (262) 29
OPEN_PARENT (263) 8 9 10 11 12 13 39
CLOSE_PARENT (264) 8 9 10 11 12 13 39
OPEN_BRACE (265) 2 3
CLOSE_BRACE (266) 2 3
LESS_THAN (267) 20
GREATER_THAN (268) 21
EQUAL (269) 19
COMMA (270) 16 18
TYPE (271) 6
PRINT (272) 8
FUNCTION_CALL (273)
FUNCTION_DECLARATION (274) 12
RETURN (275) 14
TRUE (276) 33
FALSE (277) 34
NOT (278) 38
AND (279) 30
OR (280) 25
IF (281) 9 10
ELSE (282) 10
WHILE (283) 11
STRING (284) 32
INT (285) 31
IDENTIFIER (286) 6 7 12 13 15 16 35


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
block (34)
    on left: 2 3, on right: 9 10 11 12
statement_list (35)
    on left: 4 5, on right: 1 2 5
statement (36)
    on left: 6 7 8 9 10 11 12 13 14, on right: 4 5
parameter_list (37)
    on left: 15 16, on right: 12 13 16
print_list (38)
    on left: 17 18, on right: 8 18
relexpression (39)
    on left: 19 20 21 22, on right: 6 7 9 10 11 14 17 18 39
expression (40)
    on left: 23 24 25 26, on right: 19 20 21 22
term (41)
    on left: 27 28 29 30, on right: 23 24 25 26 28 29 30
factor (42)
    on left: 31 32 33 34 35 36 37 38 39, on right: 27 28 29 30 36 37
    38


state 0

    0 $accept: . program $end

    TYPE                  shift, and go to state 1
    PRINT                 shift, and go to state 2
    FUNCTION_DECLARATION  shift, and go to state 3
    RETURN                shift, and go to state 4
    IF                    shift, and go to state 5
    WHILE                 shift, and go to state 6
    IDENTIFIER            shift, and go to state 7

    program         go to state 8
    statement_list  go to state 9
    statement       go to state 10


state 1

    6 statement: TYPE . IDENTIFIER ASSIGN relexpression

    IDENTIFIER  shift, and go to state 11


state 2

    8 statement: PRINT . OPEN_PARENT print_list CLOSE_PARENT

    OPEN_PARENT  shift, and go to state 12


state 3

   12 statement: FUNCTION_DECLARATION . IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT block

    IDENTIFIER  shift, and go to state 13


state 4

   14 statement: RETURN . relexpression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 23
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 5

    9 statement: IF . OPEN_PARENT relexpression CLOSE_PARENT block
   10          | IF . OPEN_PARENT relexpression CLOSE_PARENT block ELSE block

    OPEN_PARENT  shift, and go to state 27


state 6

   11 statement: WHILE . OPEN_PARENT relexpression CLOSE_PARENT block

    OPEN_PARENT  shift, and go to state 28


state 7

    7 statement: IDENTIFIER . ASSIGN relexpression
   13          | IDENTIFIER . OPEN_PARENT parameter_list CLOSE_PARENT

    ASSIGN       shift, and go to state 29
    OPEN_PARENT  shift, and go to state 30


state 8

    0 $accept: program . $end

    $end  shift, and go to state 31


state 9

    1 program: statement_list .
    5 statement_list: statement_list . statement

    TYPE                  shift, and go to state 1
    PRINT                 shift, and go to state 2
    FUNCTION_DECLARATION  shift, and go to state 3
    RETURN                shift, and go to state 4
    IF                    shift, and go to state 5
    WHILE                 shift, and go to state 6
    IDENTIFIER            shift, and go to state 7

    $default  reduce using rule 1 (program)

    statement  go to state 32


state 10

    4 statement_list: statement .

    $default  reduce using rule 4 (statement_list)


state 11

    6 statement: TYPE IDENTIFIER . ASSIGN relexpression

    ASSIGN  shift, and go to state 33


state 12

    8 statement: PRINT OPEN_PARENT . print_list CLOSE_PARENT

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    print_list     go to state 34
    relexpression  go to state 35
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 13

   12 statement: FUNCTION_DECLARATION IDENTIFIER . OPEN_PARENT parameter_list CLOSE_PARENT block

    OPEN_PARENT  shift, and go to state 36


state 14

   36 factor: PLUS . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 37


state 15

   37 factor: MINUS . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 38


state 16

   39 factor: OPEN_PARENT . relexpression CLOSE_PARENT

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 39
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 17

   33 factor: TRUE .

    $default  reduce using rule 33 (factor)


state 18

   34 factor: FALSE .

    $default  reduce using rule 34 (factor)


state 19

   38 factor: NOT . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 40


state 20

   32 factor: STRING .

    $default  reduce using rule 32 (factor)


state 21

   31 factor: INT .

    $default  reduce using rule 31 (factor)


state 22

   35 factor: IDENTIFIER .

    $default  reduce using rule 35 (factor)


state 23

   14 statement: RETURN relexpression .

    $default  reduce using rule 14 (statement)


state 24

   19 relexpression: expression . EQUAL expression
   20              | expression . LESS_THAN expression
   21              | expression . GREATER_THAN expression
   22              | expression .

    LESS_THAN     shift, and go to state 41
    GREATER_THAN  shift, and go to state 42
    EQUAL         shift, and go to state 43

    $default  reduce using rule 22 (relexpression)


state 25

   23 expression: term . PLUS term
   24           | term . MINUS term
   25           | term . OR term
   26           | term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    AND    shift, and go to state 48
    OR     shift, and go to state 49

    $default  reduce using rule 26 (expression)


state 26

   27 term: factor .

    $default  reduce using rule 27 (term)


state 27

    9 statement: IF OPEN_PARENT . relexpression CLOSE_PARENT block
   10          | IF OPEN_PARENT . relexpression CLOSE_PARENT block ELSE block

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 50
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 28

   11 statement: WHILE OPEN_PARENT . relexpression CLOSE_PARENT block

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 51
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 29

    7 statement: IDENTIFIER ASSIGN . relexpression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 52
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 30

   13 statement: IDENTIFIER OPEN_PARENT . parameter_list CLOSE_PARENT

    IDENTIFIER  shift, and go to state 53

    parameter_list  go to state 54


state 31

    0 $accept: program $end .

    $default  accept


state 32

    5 statement_list: statement_list statement .

    $default  reduce using rule 5 (statement_list)


state 33

    6 statement: TYPE IDENTIFIER ASSIGN . relexpression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 55
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 34

    8 statement: PRINT OPEN_PARENT print_list . CLOSE_PARENT
   18 print_list: print_list . COMMA relexpression

    CLOSE_PARENT  shift, and go to state 56
    COMMA         shift, and go to state 57


state 35

   17 print_list: relexpression .

    $default  reduce using rule 17 (print_list)


state 36

   12 statement: FUNCTION_DECLARATION IDENTIFIER OPEN_PARENT . parameter_list CLOSE_PARENT block

    IDENTIFIER  shift, and go to state 53

    parameter_list  go to state 58


state 37

   36 factor: PLUS factor .

    $default  reduce using rule 36 (factor)


state 38

   37 factor: MINUS factor .

    $default  reduce using rule 37 (factor)


state 39

   39 factor: OPEN_PARENT relexpression . CLOSE_PARENT

    CLOSE_PARENT  shift, and go to state 59


state 40

   38 factor: NOT factor .

    $default  reduce using rule 38 (factor)


state 41

   20 relexpression: expression LESS_THAN . expression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    expression  go to state 60
    term        go to state 25
    factor      go to state 26


state 42

   21 relexpression: expression GREATER_THAN . expression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    expression  go to state 61
    term        go to state 25
    factor      go to state 26


state 43

   19 relexpression: expression EQUAL . expression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    expression  go to state 62
    term        go to state 25
    factor      go to state 26


state 44

   23 expression: term PLUS . term

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    term    go to state 63
    factor  go to state 26


state 45

   24 expression: term MINUS . term

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    term    go to state 64
    factor  go to state 26


state 46

   28 term: term MULT . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 65


state 47

   29 term: term DIV . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 66


state 48

   30 term: term AND . factor

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    factor  go to state 67


state 49

   25 expression: term OR . term

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    term    go to state 68
    factor  go to state 26


state 50

    9 statement: IF OPEN_PARENT relexpression . CLOSE_PARENT block
   10          | IF OPEN_PARENT relexpression . CLOSE_PARENT block ELSE block

    CLOSE_PARENT  shift, and go to state 69


state 51

   11 statement: WHILE OPEN_PARENT relexpression . CLOSE_PARENT block

    CLOSE_PARENT  shift, and go to state 70


state 52

    7 statement: IDENTIFIER ASSIGN relexpression .

    $default  reduce using rule 7 (statement)


state 53

   15 parameter_list: IDENTIFIER .

    $default  reduce using rule 15 (parameter_list)


state 54

   13 statement: IDENTIFIER OPEN_PARENT parameter_list . CLOSE_PARENT
   16 parameter_list: parameter_list . COMMA IDENTIFIER

    CLOSE_PARENT  shift, and go to state 71
    COMMA         shift, and go to state 72


state 55

    6 statement: TYPE IDENTIFIER ASSIGN relexpression .

    $default  reduce using rule 6 (statement)


state 56

    8 statement: PRINT OPEN_PARENT print_list CLOSE_PARENT .

    $default  reduce using rule 8 (statement)


state 57

   18 print_list: print_list COMMA . relexpression

    PLUS         shift, and go to state 14
    MINUS        shift, and go to state 15
    OPEN_PARENT  shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    NOT          shift, and go to state 19
    STRING       shift, and go to state 20
    INT          shift, and go to state 21
    IDENTIFIER   shift, and go to state 22

    relexpression  go to state 73
    expression     go to state 24
    term           go to state 25
    factor         go to state 26


state 58

   12 statement: FUNCTION_DECLARATION IDENTIFIER OPEN_PARENT parameter_list . CLOSE_PARENT block
   16 parameter_list: parameter_list . COMMA IDENTIFIER

    CLOSE_PARENT  shift, and go to state 74
    COMMA         shift, and go to state 72


state 59

   39 factor: OPEN_PARENT relexpression CLOSE_PARENT .

    $default  reduce using rule 39 (factor)


state 60

   20 relexpression: expression LESS_THAN expression .

    $default  reduce using rule 20 (relexpression)


state 61

   21 relexpression: expression GREATER_THAN expression .

    $default  reduce using rule 21 (relexpression)


state 62

   19 relexpression: expression EQUAL expression .

    $default  reduce using rule 19 (relexpression)


state 63

   23 expression: term PLUS term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    AND   shift, and go to state 48

    $default  reduce using rule 23 (expression)


state 64

   24 expression: term MINUS term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    AND   shift, and go to state 48

    $default  reduce using rule 24 (expression)


state 65

   28 term: term MULT factor .

    $default  reduce using rule 28 (term)


state 66

   29 term: term DIV factor .

    $default  reduce using rule 29 (term)


state 67

   30 term: term AND factor .

    $default  reduce using rule 30 (term)


state 68

   25 expression: term OR term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    AND   shift, and go to state 48

    $default  reduce using rule 25 (expression)


state 69

    9 statement: IF OPEN_PARENT relexpression CLOSE_PARENT . block
   10          | IF OPEN_PARENT relexpression CLOSE_PARENT . block ELSE block

    OPEN_BRACE  shift, and go to state 75

    block  go to state 76


state 70

   11 statement: WHILE OPEN_PARENT relexpression CLOSE_PARENT . block

    OPEN_BRACE  shift, and go to state 75

    block  go to state 77


state 71

   13 statement: IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT .

    $default  reduce using rule 13 (statement)


state 72

   16 parameter_list: parameter_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 78


state 73

   18 print_list: print_list COMMA relexpression .

    $default  reduce using rule 18 (print_list)


state 74

   12 statement: FUNCTION_DECLARATION IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT . block

    OPEN_BRACE  shift, and go to state 75

    block  go to state 79


state 75

    2 block: OPEN_BRACE . statement_list CLOSE_BRACE
    3      | OPEN_BRACE . CLOSE_BRACE

    CLOSE_BRACE           shift, and go to state 80
    TYPE                  shift, and go to state 1
    PRINT                 shift, and go to state 2
    FUNCTION_DECLARATION  shift, and go to state 3
    RETURN                shift, and go to state 4
    IF                    shift, and go to state 5
    WHILE                 shift, and go to state 6
    IDENTIFIER            shift, and go to state 7

    statement_list  go to state 81
    statement       go to state 10


state 76

    9 statement: IF OPEN_PARENT relexpression CLOSE_PARENT block .
   10          | IF OPEN_PARENT relexpression CLOSE_PARENT block . ELSE block

    ELSE  shift, and go to state 82

    $default  reduce using rule 9 (statement)


state 77

   11 statement: WHILE OPEN_PARENT relexpression CLOSE_PARENT block .

    $default  reduce using rule 11 (statement)


state 78

   16 parameter_list: parameter_list COMMA IDENTIFIER .

    $default  reduce using rule 16 (parameter_list)


state 79

   12 statement: FUNCTION_DECLARATION IDENTIFIER OPEN_PARENT parameter_list CLOSE_PARENT block .

    $default  reduce using rule 12 (statement)


state 80

    3 block: OPEN_BRACE CLOSE_BRACE .

    $default  reduce using rule 3 (block)


state 81

    2 block: OPEN_BRACE statement_list . CLOSE_BRACE
    5 statement_list: statement_list . statement

    CLOSE_BRACE           shift, and go to state 83
    TYPE                  shift, and go to state 1
    PRINT                 shift, and go to state 2
    FUNCTION_DECLARATION  shift, and go to state 3
    RETURN                shift, and go to state 4
    IF                    shift, and go to state 5
    WHILE                 shift, and go to state 6
    IDENTIFIER            shift, and go to state 7

    statement  go to state 32


state 82

   10 statement: IF OPEN_PARENT relexpression CLOSE_PARENT block ELSE . block

    OPEN_BRACE  shift, and go to state 75

    block  go to state 84


state 83

    2 block: OPEN_BRACE statement_list CLOSE_BRACE .

    $default  reduce using rule 2 (block)


state 84

   10 statement: IF OPEN_PARENT relexpression CLOSE_PARENT block ELSE block .

    $default  reduce using rule 10 (statement)
